@@ -14,7 +14,8 @@ from docutils.parsers.rst import directives
 
 from sphinx import addnodes
 from sphinx.locale import pairindextypes
-from sphinx.util import patfilter, ws_re, caption_ref_re, url_re, docname_join
+from sphinx.util import patfilter, ws_re, url_re, docname_join, \
+     explicit_title_re
 from sphinx.util.compat import Directive, directive_dwim, make_admonition
 
 
@@ -55,7 +56,7 @@ class TocTree(Directive):
                 continue
             if not glob:
                 # look for explicit titles ("Some Title <document>")
-                m = caption_ref_re.match(entry)
+                m = explicit_title_re.match(entry)
                 if m:
                     ref = m.group(2)
                     title = m.group(1)
