@@ -28,7 +28,8 @@ import sphinx
 
 # Generally useful regular expressions.
 ws_re = re.compile(r'\s+')
-caption_ref_re = re.compile(r'^([^<]+?)\s*<(.+)>$')
+explicit_title_re = re.compile('^(.+?)\s*<(.*?)>$')
+caption_ref_re = explicit_title_re  # b/w compat alias
 url_re = re.compile(r'(?P<schema>.+)://.*')
 
 # SEP separates path elements in the canonical file names
@@ -437,21 +438,13 @@ def copy_static_entry(source, target, builder, context={}):
         shutil.copytree(source, target)
 
 
+
 def split_explicit_title(text):
     """Split role content into title and target, if given."""
-    brace = text.find('<')
-    if brace != -1:
-        m = caption_ref_re.match(text)
-        if m:
-            target = m.group(2)
-            title = m.group(1)
-        else:
-            # fallback: everything after '<' is the target
-            target = text[brace+1:]
-            title = text[:brace]
-        return True, title, target
-    else:
-        return False, text, text
+    match = explicit_title_re.match(text)
+    if match:
+        return True, m.group(1), m.group(2)
+    return False, text, text
 
 
 from docutils import nodes
